# ser2syslog

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  configure  configure.in  dataxfer.c  dataxfer.h  devcfg.c  devcfg.h  readconfig.c  ser2syslog.c  ser2syslog.conf
